testsuite/tests/indexed-types/should_fail/T16356_Fail3.stderr

T16356_Fail3.hs:9:3: error:
    • Cannot apply function of kind ‘* -> *’
      to visible kind argument ‘Type’
    • In the default type instance declaration for ‘T1’
      In the class declaration for ‘C’
